// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputList> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {dataSource} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          Object {
            "backgroundColor": "#f4f4f4",
          },
          false,
          false,
          false,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={false}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            Object {
              "color": "#707070",
            },
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          Object {
            "borderColor": "#ef5160",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../components/Icon/assets/error.png",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            },
            Array [
              Object {
                "alignSelf": "flex-start",
                "height": 18,
                "marginRight": 4,
                "width": 18,
              },
              Object {
                "marginTop": 12,
              },
            ],
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 12,
            "lineHeight": 16,
          },
          Object {
            "color": "#707070",
          },
          Object {
            "marginTop": 4,
            "maxWidth": "100%",
            "paddingLeft": 0,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputList> when {itemTemplate} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderTopWidth": 0,
          "borderWidth": 1,
        },
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "padding": 8,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/1",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          one
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/2",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          two
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/3",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          three
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/4",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          four
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/128/5",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          five
        </Text>
      </View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<InputList> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 16,
          },
          Object {
            "color": "#707070",
          },
          Object {
            "color": "#4a4a4a",
            "marginBottom": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 24,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#cdd2d4",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 8,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#707070"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "color": "#4a4a4a",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 42,
              "paddingHorizontal": 4,
              "paddingVertical": 7.5,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderTopWidth": 0,
          "borderWidth": 1,
        },
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "padding": 8,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        one
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        two
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        three
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        four
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#cdd2d4",
          "borderRadius": 16,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 4,
          "minHeight": 32,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        five
      </Text>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/close.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 10,
                "marginLeft": 8,
                "width": 10,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
